--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!doctype html>
-<body>
-  Hola usuarios de la internet!!!
-</body>
-<html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><link rel="stylesheet" href="./css/style.css"></head><body><div id="ir5j">Celeste Betancur Gutiérrez <br/></div><div data-gjs="navbar" id="iz3j" class="navbar"><div id="ixzs" class="navbar-container"><a href="/" id="iuxz" class="navbar-brand"></a><div id="is65" class="navbar-burger"><div class="navbar-burger-line"></div><div class="navbar-burger-line"></div><div class="navbar-burger-line"></div></div><div data-gjs="navbar-items" class="navbar-items-c"><nav data-gjs="navbar-menu" class="navbar-menu"><a href="#" id="iost1" class="navbar-menu-link">Inicio</a><a href="#" id="iayyh" class="navbar-menu-link">Sobre Mí</a><a href="#" id="i0g3h" class="navbar-menu-link">Portafolio</a><a href="#" id="ic9yv" class="navbar-menu-link">Contacto</a></nav></div></div></div><div id="ikpmx" class="row"><div id="iaksl" class="cell"></div><div id="iyfxl" class="cell"><div id="ibtxz"><span class="ILfuVd NA6bn UiGGAb"><span class="hgKElc"><b>Celeste Betancur</b>,
+ música multi-instrumentista (profesional en guitarra de Berklee College
+ of Music) y artista programadora. Con Maestría en Artes Digitales e 
+investigadora del ITM – Medellín en el grupo de Arte y Nuevos Medios.</span></span></div><img id="izvzw" src="./img/team3.jpg"/></div><div id="i6jdu" class="cell"></div></div><div id="ilxz4">Realizado por Celeste, Medellín, 2021<br/></div><script>var items = document.querySelectorAll('#is65');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+var e,t=0,n=function(){var e,t=document.createElement("void"),n={transition:"transitionend",OTransition:"oTransitionEnd",MozTransition:"transitionend",WebkitTransition:"webkitTransitionEnd"};for(e in n)if(void 0!==t.style[e])return n[e]}(),r=function(e){var t=window.getComputedStyle(e),n=t.display,r=(t.position,t.visibility,t.height,parseInt(t["max-height"]));if("none"!==n&&"0"!==r)return e.offsetHeight;e.style.height="auto",e.style.display="block",e.style.position="absolute",e.style.visibility="hidden";var i=e.offsetHeight;return e.style.height="",e.style.display="",e.style.position="",e.style.visibility="",i},i=function(e){t=1;var n=r(e),i=e.style;i.display="block",i.transition="max-height 0.25s ease-in-out",i.overflowY="hidden",""==i["max-height"]&&(i["max-height"]=0),0==parseInt(i["max-height"])?(i["max-height"]="0",setTimeout(function(){i["max-height"]=n+"px"},10)):i["max-height"]="0"},a=function(r){if(r.preventDefault(),!t){var a=this.closest("[data-gjs=navbar]"),o=a.querySelector("[data-gjs=navbar-items]");i(o),e||(o.addEventListener(n,function(){t=0;var e=o.style;0==parseInt(e["max-height"])&&(e.display="",e["max-height"]="")}),e=1)}};"gjs-collapse"in this||this.addEventListener("click",a),this["gjs-collapse"]=1
+}.bind(items[i]))();
+          }</script></body><html>
